--- a/src/app/enrollments-dashboard-home/enrollments-dashboard-home.component.html
+++ b/src/app/enrollments-dashboard-home/enrollments-dashboard-home.component.html
@@ -1,39 +1,51 @@
 <div class="content">
-    <mat-card class="example-card">
-        <mat-card-header>
-            <mat-card-title>
-                Enrollments Dashboard Overview
-            </mat-card-title>
-            <mat-card-subtitle>
-
-            </mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content class="dashboard-card-content">
-            <div style="display: flex;flex-direction: column;gap: 16px;">
-                <div class="mat-headline-2">
-                    {{dataSource.data.length}}
-                </div>
-                <div class="mat-caption">
-                    Number Of Enrollments
-                </div>
-            </div>
-        </mat-card-content>
-    </mat-card>
-    <button style="margin-top: 1rem;" mat-button (click)="add_enrollment_dialog()">Add Enrollment</button>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title> Enrollments Dashboard Overview </mat-card-title>
+      <mat-card-subtitle> </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content class="dashboard-card-content">
+      <div style="display: flex; flex-direction: column; gap: 16px">
+        <div class="mat-headline-2">
+          {{ dataSource.data.length }}
+        </div>
+        <div class="mat-caption">Number Of Enrollments</div>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  <button style="margin-top: 1rem" mat-button (click)="add_enrollment_dialog()">
+    Add Enrollment
+  </button>
 </div>
 
-<table style="margin-top: 1rem;" mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="student_id">
-        <th mat-header-cell *matHeaderCellDef>Student Id</th>
-        <td mat-cell *matCellDef="let enrollment">{{enrollment.student_id}}</td>
-    </ng-container>
+<table style="margin-top: 1rem" mat-table [dataSource]="dataSource">
+  <ng-container matColumnDef="student_id">
+    <th mat-header-cell *matHeaderCellDef>Student Id</th>
+    <td mat-cell *matCellDef="let enrollment">{{ enrollment.student_id }}</td>
+  </ng-container>
 
-    <ng-container matColumnDef="class_id">
-        <th mat-header-cell *matHeaderCellDef>Class Id</th>
-        <td mat-cell *matCellDef="let enrollment">{{enrollment.class_id}}</td>
-    </ng-container>
+  <ng-container matColumnDef="class_id">
+    <th mat-header-cell *matHeaderCellDef>Class Id</th>
+    <td mat-cell *matCellDef="let enrollment">{{ enrollment.class_id }}</td>
+  </ng-container>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let enrollment">
+      <button mat-button (click)="edit_enrollment(enrollment)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-button color="warn" (click)="delete_enrollment(enrollment)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+    <td></td>
+  </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row;columns:displayedColumns"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
-<mat-paginator [pageSize]="5" [pageSizeOptions]="[5,10,20,50]" (page)="onPageChange($event)"></mat-paginator>
+<mat-paginator
+  [pageSize]="5"
+  [pageSizeOptions]="[5, 10, 20, 50]"
+  (page)="onPageChange($event)"
+></mat-paginator>
